--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ button {
 	/*background-color: black;*/
 	border-radius: 20px;
 	margin-right: 5px;
-	border: 4px solid transparent;
+	border: 2px solid transparent;
 }
 
 #greencircle {
@@ -121,13 +121,11 @@ button {
 }
 
 #randomcircle {
-	background-image: url("test.jpg");
-	background-size: 400px 400px;
+	background-image: url("rainbow.jpg");
 }
 
 #fadecircle {
-	background-image: url("fade.jpg");
-	background-size: 20px 20px;
+	background-image: url("opacity.jpg");
 }
 
 #contain-colors {
