--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@ body {
 	background-color: #e7eaf1;
 }
 
+span {
+	font-size: 12px;
+	margin-right: 5px;
+}
+
 h3 {
 	margin-top: -15px;
 	margin-left:35px;
@@ -16,12 +21,18 @@ a:hover {
 	color:black;
 }
 
+button#regencolors {
+	display:block;
+	margin: 5px auto;
+}
+
 #container {
   border: 5px solid orange;
   width: 800px;
   height: 800px;
   background-color:white;
   float:left;
+  box-shadow: 11px 9px 5px 0px rgba(0,0,0,0.75);
 }
 
 #top-holder {
@@ -40,7 +51,6 @@ a:hover {
 .grid-square {
 	float:left;
 	opacity: 1;
-	border: 1px solid #885a07;
 	background-color: white;
 }
 
@@ -58,68 +68,23 @@ button {
 	margin-left:35px;
 }
 
-#color-head {
-	margin-top:-15px;
-	margin-bottom: 15px;
-	text-align:center;
-	width:100%;
-	height: 35px;
-	background-color:orange;
-}
-#color-head h1 {
-	font-size: 20px;
-	color: white;
-	padding-top:5px;
+.frholder {
+	width: 126px;
+	margin: auto;
+	margin-bottom: 10px;
+	text-align: center;
 }
 
-.color-circle {
-	height: 30px;
-	width: 30px;
-	display: inline-block;
-	/*background-color: black;*/
-	border-radius: 20px;
+.frcontain {
+	display:inline-block;
+	/* margin: auto; */
 	margin-right: 5px;
-	border: 2px solid transparent;
 }
 
-#greencircle {
-	background-color:green;
-}
-
-#bluecircle {
-	background-color:blue;
-}
-
-#redcircle {
-	background-color:red;
-}
-
-#yellowcircle {
-	background-color:yellow;
-}
-
-#purplecircle {
-	background-color:purple;
-}
-
-#pinkcircle {
-	background-color:pink;
-}
-
-#orangecircle {
-	background-color:orange;
-}
-
-#browncircle {
-	background-color:brown;
-}
-
-#graycircle {
-	background-color:gray;
-}
-
-#whitecircle {
-	background-color: white;
+.fade-rain {
+	height: 30px;
+	width: 50px;
+	border: 3px solid white;
 }
 
 #randomcircle {
@@ -131,5 +96,42 @@ button {
 }
 
 #contain-colors {
-	margin-left: 14px;
+	width: 150px;
+	height: 150px;
+	margin: auto;
+}
+
+.grid-color {
+	height:10px;
+	width:10px;
+	/*background-color:black;*/
+	float:left;
+}
+
+#preview-container {
+	margin: 5px auto;
+	width: 125px;
+	text-align: center;
+}
+
+#selected {
+	background-color: blue;
+}
+
+.sel-high {
+	width: 60px;
+	display:inline-block;
+}
+
+.previewbox {
+	width:48px;
+	height:48px;
+	border: 2px solid black;
+}
+
+.divider {
+	height: 2px;
+	width: 90%;
+	background-color: orange;
+	margin: 10px auto;
 }
