--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,7 @@ button {
 .fade-rain {
 	height: 30px;
 	width: 50px;
-	border: 3px solid white;
+	border: 3px solid transparent;
 }
 
 #randomcircle {
@@ -127,7 +127,7 @@ button {
 .previewbox {
 	width:48px;
 	height:48px;
-	border: 2px solid black;
+	border: 2px solid #4286f4;
 }
 
 .divider {
